[package]
name = "geo-geodesy"
version = "5.0.0"
edition = "2021"
description = "Geodesy integration with the geo crate"
license = "MIT/Apache-2.0"
repository = "https://github.com/frewsxcv/geo-geodesy"

[dependencies]
geodesy = { version = "0.13", default-features = false }
crs-definitions = "0.3"
geo = { version = "0.30", default-features = false }
