[package]
name = "geo-geodesy"
version = "7.0.0"
edition = "2021"
description = "Geodesy integration with the geo crate"
license = "MIT/Apache-2.0"
repository = "https://github.com/frewsxcv/geo-geodesy"

[dependencies]
geodesy = { version = "0.15", default-features = false }
crs-definitions = "0.4"
geo = { version = "0.32", default-features = false }
